// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReplyPostUseCase should comment a post with images 1`] = `
{
  "author": {
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
  "createdAt": 2000-01-01T00:00:00.000Z,
  "id": "id-1",
  "images": [
    {
      "id": "id-1",
      "url": "https://example.com/image1.jpg",
    },
  ],
  "isLiked": false,
  "likes": 0,
  "parent": {
    "author": {
      "username": "johndoe",
    },
  },
  "parentId": "id-1",
  "replies": 0,
  "text": "This is a post",
}
`;

exports[`ReplyPostUseCase should comment a post without images 1`] = `
{
  "author": {
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
  "createdAt": 2000-01-01T00:00:00.000Z,
  "id": "id-1",
  "images": [],
  "isLiked": false,
  "likes": 0,
  "parent": {
    "author": {
      "username": "johndoe",
    },
  },
  "parentId": "id-1",
  "replies": 0,
  "text": "This is a post",
}
`;
